# showdeskten-kicker-applet

./: Doxyfile  README  autogen.sh  configure.in.in  showdeskten_applet.kdevelop  showdeskten_applet.kdevelop.pcs  showdeskten_applet.kdevses
admin/: Doxyfile.am  Doxyfile.global  acinclude.m4.in  am_edit  compile  configure.in.bot.end  configure.in.min  cvs.sh  debianrules  depcomp  detect-autoconf.pl  doxygen.sh  install-sh  missing  mkinstalldirs  ylwrap
doc/: Makefile.am
doc/en/: Makefile.am.disabled  index.docbook
po/: Makefile
src/: Makefile.am  showdeskten_applet.cpp  showdeskten_applet.desktop  showdeskten_applet.h  test
templates/: h
